syntax = "proto3";
package delicate.actuator;

import "google/protobuf/any.proto";

message Task{
    uint64 id = 1;
    string name = 2;
    string command = 3;
}

message RecordId{
    int64 id = 1;
}

message UnifiedResponseMessages{
    int32 code = 1;
    string msg = 2;
    repeated google.protobuf.Any data = 3;  
}

service Actuator {
    rpc RunTask(Task) returns (UnifiedResponseMessages) {}
    rpc CancelTask(RecordId) returns (UnifiedResponseMessages) {}
    rpc KeepRunningTask(Task) returns (stream UnifiedResponseMessages) {}

}